test/corpus/smoke.txt
==================
Explicit void compatibility on an attributed function
==================

package sample

#[test]
fn main() -> void {
    "ok"
}

---

(source_file
  (package_declaration
    name: (dotted_path
      (identifier)))
  (function_declaration
    (attribute
      name: (identifier))
    name: (identifier)
    parameters: (parameters)
    return_type: (type
      (primitive_type))
    body: (block
      (expression_statement
        (string_literal)))))

==================
Basic package and function
==================

package sample

fn main() {
    "ok"
}

---

(source_file
  (package_declaration
    name: (dotted_path
      (identifier)))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (expression_statement
        (string_literal)))))

==================
Current v0.1 declarations and script body
==================

package sample

const LIMIT: i32 = 3

fn main() {
    let Option.Some(value) = parse()? else {
        return
    }
    if let Result.Ok(output) = format(mut value) {
        defer io.println(output)
    }
    for item in values()? {
        continue
    }
}

let script_message: string = "script"
io.println(script_message)

---

(source_file
  (package_declaration
    name: (dotted_path
      (identifier)))
  (const_declaration
    name: (type_identifier)
    type: (type
      (primitive_type))
    value: (number_literal))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (let_statement
        pattern: (let_else_pattern
          (field_access
            (type_identifier)
            (type_identifier))
          (identifier))
        value: (unary_postfix
          (call_expression
            function: (field_access
              (identifier))
            arguments: (arguments)))
        alternative: (block
          (return_statement)))
      (if_let_statement
        pattern: (pattern
          (field_access
            (type_identifier)
            (type_identifier))
          (identifier))
        value: (call_expression
          function: (field_access
            (identifier))
          arguments: (arguments
            (argument
              (field_access
                (identifier)))))
        consequence: (block
          (defer_statement
            (call_expression
              function: (field_access
                (identifier)
                (identifier))
              arguments: (arguments
                (argument
                  (field_access
                    (identifier))))))))
      (for_statement
        (identifier)
        (unary_postfix
          (call_expression
            function: (field_access
              (identifier))
            arguments: (arguments)))
        (block
          (continue_statement)))))
  (let_statement
    name: (identifier)
    type: (type
      (primitive_type))
    value: (string_literal))
  (expression_statement
    (call_expression
      function: (field_access
        (identifier)
        (identifier))
      arguments: (arguments
        (argument
          (field_access
            (identifier)))))))

==================
Interface and FFI declarations
==================

package sample

pub interface Display {
    fn to_string(self) -> string
}

extern "C" {
    fn puts(message: string) -> i32
}

impl Display for User {
    fn to_string(self) -> string {
        return self.name
    }
}

fn main() {
    unsafe {
        puts("hello")
    }
}

---

(source_file
  (package_declaration
    name: (dotted_path
      (identifier)))
  (interface_declaration
    name: (type_identifier)
    (interface_method
      name: (identifier)
      parameters: (parameters
        (parameter))
      return_type: (type
        (primitive_type))))
  (extern_block
    abi: (string_literal)
    (extern_function
      name: (identifier)
      parameters: (parameters
        (parameter
          name: (identifier)
          type: (type
            (primitive_type))))
      return_type: (type
        (primitive_type))))
  (impl_block
    interface: (type_path
      (type_identifier))
    type: (type_path
      (type_identifier))
    (function_declaration
      name: (identifier)
      parameters: (parameters
        (parameter))
      return_type: (type
        (primitive_type))
      body: (block
        (return_statement
          (field_access
            (identifier)
            (identifier))))))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (unsafe_statement
        (block
          (expression_statement
            (call_expression
              function: (field_access
                (identifier))
              arguments: (arguments
                (argument
                  (string_literal))))))))))

==================
Current v0.1 operators
==================

package sample

fn main() {
    let mut value: i64 = 1
    value += 2
    value++
    value--
    let ok: bool = !failed && ready || cached
    let grouped: i64 = -(a + b) * -c
    let masked: i64 = value & mask &^ clear << 1 >> shift | extra ^ flags
}

---

(source_file
  (package_declaration
    name: (dotted_path
      (identifier)))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (let_statement
        name: (identifier)
        type: (type
          (primitive_type))
        value: (number_literal))
      (assignment_statement
        left: (field_access
          (identifier))
        right: (number_literal))
      (postfix_update_statement
        target: (field_access
          (identifier)))
      (postfix_update_statement
        target: (field_access
          (identifier)))
      (let_statement
        name: (identifier)
        type: (type
          (primitive_type))
        value: (binary_expression
          left: (binary_expression
            left: (unary_expression
              argument: (field_access
                (identifier)))
            right: (field_access
              (identifier)))
          right: (field_access
            (identifier))))
      (let_statement
        name: (identifier)
        type: (type
          (primitive_type))
        value: (binary_expression
          left: (unary_expression
            argument: (parenthesized_expression
              (binary_expression
                left: (field_access
                  (identifier))
                right: (field_access
                  (identifier)))))
          right: (unary_expression
            argument: (field_access
              (identifier)))))
      (let_statement
        name: (identifier)
        type: (type
          (primitive_type))
        value: (binary_expression
          left: (binary_expression
            left: (binary_expression
              left: (binary_expression
                left: (binary_expression
                  left: (binary_expression
                    left: (field_access
                      (identifier))
                    right: (field_access
                      (identifier)))
                  right: (field_access
                    (identifier)))
                right: (number_literal))
              right: (field_access
                (identifier)))
            right: (field_access
              (identifier)))
          right: (field_access
            (identifier)))))))

==================
Comments
==================

package sample

// leading
fn main() {
    /* outer
       /* inner */
       done */
    io.println("comments ok")
}

---

(source_file
  (package_declaration
    name: (dotted_path
      (identifier)))
  (line_comment)
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (block_comment
        (block_comment))
      (expression_statement
        (call_expression
          function: (field_access
            (identifier)
            (identifier))
          arguments: (arguments
            (argument
              (string_literal))))))))

==================
Array literals and nested indexing
==================

package sample

fn main() {
    let values = [1, 2, 3]
    let mut matrix = [[1, 2], [3, 4]]
    let value = matrix[0][1]
    matrix[0][1] = 7
    let empty: Array<i32> = []
}

---

(source_file
  (package_declaration
    name: (dotted_path
      (identifier)))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (let_statement
        name: (identifier)
        value: (array_literal
          (number_literal)
          (number_literal)
          (number_literal)))
      (let_statement
        name: (identifier)
        value: (array_literal
          (array_literal
            (number_literal)
            (number_literal))
          (array_literal
            (number_literal)
            (number_literal))))
      (let_statement
        name: (identifier)
        value: (index_expression
          value: (index_expression
            value: (field_access
              (identifier))
            index: (number_literal))
          index: (number_literal)))
      (assignment_statement
        left: (index_expression
          value: (index_expression
            value: (field_access
              (identifier))
            index: (number_literal))
          index: (number_literal))
        right: (number_literal))
      (let_statement
        name: (identifier)
        type: (type
          (type_path
            (type_identifier))
          (type_arguments
            (type
              (primitive_type))))
        value: (array_literal)))))

==================
Structured async task syntax
==================

package sample

import std.task
import std.time

interface Runner {
    suspend fn run(self)
}

pub suspend fn main() {
    task.scope {
        task.deadline(time.duration_millis(5)) {
            task.yield_now()
        }
        task.select {
            task.receive(messages) => message {
                consume(message)
            }
            task.sleep(time.duration_millis(50)) => timeout {
                consume(timeout)
            }
        }
    }
}

---

(source_file
  (package_declaration
    name: (dotted_path
      (identifier)))
  (import_declaration
    path: (dotted_path
      (identifier)
      (identifier)))
  (import_declaration
    path: (dotted_path
      (identifier)
      (identifier)))
  (interface_declaration
    name: (type_identifier)
    (interface_method
      name: (identifier)
      parameters: (parameters
        (parameter))))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (task_scope_statement
        namespace: (identifier)
        body: (block
          (task_deadline_statement
            namespace: (identifier)
            duration: (call_expression
              function: (field_access
                (identifier)
                (identifier))
              arguments: (arguments
                (argument
                  (number_literal))))
            body: (block
              (expression_statement
                (call_expression
                  function: (field_access
                    (identifier)
                    (identifier))
                  arguments: (arguments)))))
          (task_select_statement
            namespace: (identifier)
            (task_select_arm
              operation: (call_expression
                function: (field_access
                  (identifier)
                  (identifier))
                arguments: (arguments
                  (argument
                    (field_access
                      (identifier)))))
              binding: (identifier)
              body: (block
                (expression_statement
                  (call_expression
                    function: (field_access
                      (identifier))
                    arguments: (arguments
                      (argument
                        (field_access
                          (identifier))))))))
            (task_select_arm
              operation: (call_expression
                function: (field_access
                  (identifier)
                  (identifier))
                arguments: (arguments
                  (argument
                    (call_expression
                      function: (field_access
                        (identifier)
                        (identifier))
                      arguments: (arguments
                        (argument
                          (number_literal)))))))
              binding: (identifier)
              body: (block
                (expression_statement
                  (call_expression
                    function: (field_access
                      (identifier))
                    arguments: (arguments
                      (argument
                        (field_access
                          (identifier))))))))))))))

==================
Implicit void declarations and callable return types
==================

package syntax

interface Sink {
    fn close(self)
    suspend fn flush(self)
}

extern "C" {
    fn release(handle: i64)
}

struct Handle {
    value: i64
}

impl Sink for Handle {
    fn close(self) {
    }

    suspend fn flush(self) {
    }
}

fn register(callback: task fn(string) -> void) -> Result<void, string> {
    callback("ok")
    return Ok(void)
}

---

(source_file
  (package_declaration
    (dotted_path
      (identifier)))
  (interface_declaration
    (type_identifier)
    (interface_method
      (identifier)
      (parameters
        (parameter)))
    (interface_method
      (identifier)
      (parameters
        (parameter))))
  (extern_block
    (string_literal)
    (extern_function
      (identifier)
      (parameters
        (parameter
          (identifier)
          (type
            (primitive_type))))))
  (struct_declaration
    (type_identifier)
    (struct_body
      (field_declaration
        (identifier)
        (type
          (primitive_type)))))
  (impl_block
    (type_path
      (type_identifier))
    (type_path
      (type_identifier))
    (function_declaration
      (identifier)
      (parameters
        (parameter))
      (block))
    (function_declaration
      (identifier)
      (parameters
        (parameter))
      (block)))
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type
          (callable_type
            (type
              (primitive_type))
            (type
              (primitive_type))))))
    (type
      (type_path
        (type_identifier))
      (type_arguments
        (type
          (primitive_type))
        (type
          (primitive_type))))
    (block
      (expression_statement
        (call_expression
          (field_access
            (identifier))
          (arguments
            (argument
              (string_literal)))))
      (return_statement
        (call_expression
          (field_access
            (type_identifier))
          (arguments
            (argument
              (field_access
                (identifier)))))))))
